plugins {
    id 'com.android.application'
}

android {
    namespace 'fr.chk.piratewarrior'
    compileSdk 34

    defaultConfig {
        applicationId 'fr.chk.piratewarrior'
        minSdk 21
        targetSdk 34
        versionCode 2
        versionName '2.0.0-alpha01'

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    testOptions {
        unitTests.returnDefaultValues = true
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}
